--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ body {
     color: var(--secondary-color) !important;
 }
 
+a:hover {
+  opacity: .85;
+}
+
 /* General styles ENDS */
 
 /* Navbar STARTS */
@@ -117,32 +121,32 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-    .main-section h1 {
-        margin-top: 16px;
-        font-size: 50px;
-        font-weight: 800;
-        font-family: CocogooseBold;
-        letter-spacing: 1.5px;
-        color: var(--secondary-transparent-color);
-    }
-
-    .main-section div {
-        font-size: 36px;
-        font-weight: 400;
-    }
+  .main-section h1 {
+    margin-top: 16px;
+    font-size: 50px;
+    font-weight: 800;
+    font-family: CocogooseBold;
+    letter-spacing: 1.5px;
+    color: var(--secondary-transparent-color);
   }
+
+  .main-section div {
+    font-size: 36px;
+    font-weight: 400;
+  }
+}
 
 /* Hero Page ENDS */
 
 /* About section STARTS */
 
 .about-page {
-    background-color: var(--primary-color);
-	background-image: radial-gradient(#777 5%, transparent 5%),
-	radial-gradient(#777 5%, transparent 5%);
+  background-color: var(--primary-color);
+	background-image: radial-gradient(#000 5%, transparent 5%),
+  	radial-gradient(#000 5%, transparent 5%);
 	background-size: 30px 30px;
 	background-position: 0 0, 15px 15px;
-    padding: 64px 8px;
+  padding: 64px 8px;
 }
 
 .about-section {
@@ -151,7 +155,7 @@ body {
 }
 
 .about-line {
-    border: var(--secondary-color) 1px solid;
+    border-top: var(--secondary-color) 1px solid;
     width: 15%;
     max-width: 104px;
     margin: 0 auto;
@@ -165,45 +169,78 @@ body {
 
 .about-item {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 8px 8px;
     border: var(--tertiary-color) 1px solid;
     padding: 32px 16px;
-    max-width: 300px;
+    max-width: 100%;
     background-color: var(--primary-color-bg);
 }
 
 .about-item img {
     background-color: var(--tertiary-color);
+    border-radius: 44px;
+    padding: 12px;
 }
 
 .about-item h3 {
     color: var(--secondary-color);
-    margin: 16px 0;
+    text-align: left;
+    margin: 16px;
+    margin-left: 16px;
 }
 
 .about-item p {
     color: var(--tertiary-color);
     font-weight: 600;
     font-size: 18px;
+    text-align: justify;
+    margin-left: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .about-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 8px 6px;
+    border: var(--tertiary-color) 1px solid;
+    padding: 32px 12px;
+    max-width: 300px;
+    background-color: var(--primary-color-bg);
+  }
+
+  .about-item h3 {
     text-align: center;
+    margin: 16px auto;
+  }
+  
+  .about-item p {
+    text-align: center;
+    margin: 0;
+  }
 }
 
 /* About section ENDS */
 
+.ticket-page, .ticket-section {
+  background: #eee;
+}
+
 .tickets-instructions {
-    font-weight: 600;
-    padding: 6px 0;
-    max-width: 650px;
-    margin-left: auto;
-    margin-right: auto;
+  font-weight: 600;
+  padding: 6px 0;
+  max-width: 650px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .tickets-instructions strong {
-    color: var(--secondary-color);
-    font-weight: 800;
+  color: var(--secondary-color);
+  font-weight: 800;
 }
 
 .ticket-grid {
@@ -212,6 +249,7 @@ body {
   grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 1px;
   grid-row-gap: 1px;
+  overflow-x: auto;
   border:  10px solid transparent;
   background: 
     linear-gradient(#fff,#fff) center/calc(100% - 2px) calc(100% - 2px) padding-box,
@@ -219,34 +257,106 @@ body {
     transparent 2px, transparent 2px, 
     var(--primary-color) 16px, var(--white-color) 32px ,var(--secondary-color) 48px) border-box;
   background-repeat:no-repeat;
-    }
-    
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 1 / 3 / 2 / 5; }
-    .div4 { grid-area: 1 / 5 / 2 / 6; }
-    .div5 { grid-area: 2 / 1 / 3 / 2; }
-    .div6 { grid-area: 2 / 2 / 3 / 3; }
-    .div7 { grid-area: 2 / 3 / 3 / 4; }
-    .div8 { grid-area: 2 / 4 / 3 / 5; }
-    .div9 { grid-area: 2 / 5 / 3 / 6; }
-    .div10 { grid-area: 3 / 1 / 4 / 2; }
-    .div11 { grid-area: 3 / 2 / 4 / 3; }
-    .div12 { grid-area: 3 / 3 / 4 / 4; }
-    .div13 { grid-area: 3 / 4 / 4 / 5; }
-    .div14 { grid-area: 3 / 5 / 4 / 6; }
-    .div15 { grid-area: 4 / 1 / 5 / 2; }
-    .div16 { grid-area: 4 / 2 / 5 / 3; }
-    .div17 { grid-area: 4 / 3 / 5 / 4; }
-    .div18 { grid-area: 4 / 4 / 5 / 5; }
-    .div19 { grid-area: 4 / 5 / 5 / 6; }
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+  background: #eee 
+}
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+  background: #eee
+}
+.div3 {
+  grid-area: 1 / 3 / 2 / 5;
+  background: #eee
+}
+.div4 {
+  grid-area: 1 / 5 / 2 / 6;
+  background: #eee
+}
+
+.div5 { grid-area: 2 / 1 / 3 / 2; }
+.div6 { grid-area: 2 / 2 / 3 / 3; }
+.div7 { grid-area: 2 / 3 / 3 / 4; }
+.div8 { grid-area: 2 / 4 / 3 / 5; }
+.div9 { grid-area: 2 / 5 / 3 / 6; }
+.div10 { grid-area: 3 / 1 / 4 / 2; }
+.div11 { grid-area: 3 / 2 / 4 / 3; }
+.div12 { grid-area: 3 / 3 / 4 / 4; }
+.div13 { grid-area: 3 / 4 / 4 / 5; }
+.div14 { grid-area: 3 / 5 / 4 / 6; }
+.div15 { grid-area: 4 / 1 / 5 / 2; }
+.div16 { grid-area: 4 / 2 / 5 / 3; }
+.div17 { grid-area: 4 / 3 / 5 / 4; }
+.div18 { grid-area: 4 / 4 / 5 / 5; }
+.div19 { grid-area: 4 / 5 / 5 / 6; }
+
+.ticket-grid div {
+  display: flex;
+  height: 100%;
+  min-width: 124px;
+  justify-content: center;
+  align-items: center;
+  border: #ccc 1px solid;
+}
 
 .price-grid {
-    font-weight: 500;
-    font-size: 20px;
-    color: var(--secondary-color);
+  font-weight: 500;
+  font-size: 20px;
+  padding-top: 8px;
+  color: var(--secondary-color);
 }
 
-.ticket-grid {
-    background: gray;
+.submit-buttom {
+  background-color: var(--secondary-color);
+  color: var(--tertiary-color);
+  border: none;
+  max-width: 350px;
+  margin: auto auto;
 }
+
+.submit-buttom:hover {
+  opacity: .8;
+}
+
+/* Footer STARTS */
+
+footer {
+  background-color: var(--primary-color);
+  padding: 16px 0;
+  color: var(--tertiary-color);
+  font-weight: 600;
+  font-size: 18px
+}
+
+footer ul {
+  list-style-type: none;
+  text-decoration: none;
+}
+
+footer i {
+  font-size: 36px;
+  color: var(--secondary-color);
+  margin: 4px 16px;
+  background-color: var(--tertiary-color);
+  padding: 8px;
+  border-radius: 35px;
+  border: var(--tertiary-color) 1px solid;
+}
+
+footer i:hover {
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
+}
+
+footer a {
+  color: var(--secondary-color);
+}
+
+footer a:hover {
+  color: var(--tertiary-color);
+  text-decoration: underline;
+}
+
+/* Footer ENDS */
