--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ a:hover {
 
 .hero-page {
     background: linear-gradient(0deg, rgba(250,250,236,.85) 0%, rgba(255,255,255,.85) 102%, rgba(255,255,255,.97) 100%), url(../img/background-heropage.jpg);
-    height: 90vh;
+    height: 115vh;
     width: 100%;
     padding: 0;
     background-repeat: no-repeat;
@@ -147,6 +147,7 @@ a:hover {
 	background-size: 30px 30px;
 	background-position: 0 0, 15px 15px;
   padding: 64px 8px;
+  min-height: 120vh;
 }
 
 .about-section {
@@ -204,12 +205,13 @@ a:hover {
   .about-item {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 8px 4px;
     border: var(--tertiary-color) 1px solid;
     padding: 32px 12px;
-    max-width: 280px;
+    min-width: 250px;
+    max-width: 250px;
     background-color: var(--primary-color-bg);
   }
 
@@ -221,10 +223,12 @@ a:hover {
   .about-item p {
     text-align: center;
     margin: 0;
+    font-size: 14px;
   }
 }
 
 /* About section ENDS */
+/* Tickets Section STARTS */
 
 .ticket-page, .ticket-section {
   background: #eee;
@@ -320,6 +324,7 @@ a:hover {
   opacity: .8;
 }
 
+/* Tickets Section ENDS */
 /* Footer STARTS */
 
 footer {
@@ -327,7 +332,7 @@ footer {
   padding: 16px 0;
   color: var(--tertiary-color);
   font-weight: 600;
-  font-size: 18px
+  font-size: 12px
 }
 
 footer ul {
@@ -336,7 +341,7 @@ footer ul {
 }
 
 footer i {
-  font-size: 36px;
+  font-size: 24px;
   color: var(--secondary-color);
   margin: 4px 16px;
   background-color: var(--tertiary-color);
