--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,67 @@
 @font-face {
-    font-family: CocogooseLight;
-    src: url(../fonts/Cocogoose\ Pro\ Light-trial.ttf);
+  font-family: CocogooseLight;
+  src: url(../fonts/Cocogoose\ Pro\ Light-trial.ttf);
 }
 
 @font-face {
-    font-family: CocogooseThin;
-    src: url(../fonts/Cocogoose\ Pro\ Thin-trial.ttf);
+  font-family: CocogooseThin;
+  src: url(../fonts/Cocogoose\ Pro\ Thin-trial.ttf);
 }
 
 @font-face {
-    font-family: CocogooseUltralight;
-    src: url(../fonts/Cocogoose\ Pro\ Ultralight-trial.ttf);
+  font-family: CocogooseUltralight;
+  src: url(../fonts/Cocogoose\ Pro\ Ultralight-trial.ttf);
 }
 
 @font-face {
-    font-family: CocogooseBold;
-    src: url(../fonts/Cocogoose\ Pro-trial.ttf);
+  font-family: CocogooseBold;
+  src: url(../fonts/Cocogoose\ Pro-trial.ttf);
 }
 
 /* Variables used in the projects */
 
 :root {
-    --primary-color: #272a31; 
-    --secondary-color: #ec5242;
-    --secondary-transparent-color: #ec5342db; 
-    --tertiary-color: #d3d3d3;
-    --white-color: #ffffff; 
-    --primary-color-bg: #fff1;
-    --lato-font-family: 'Lato', sans-serif;
+  --primary-color: #272a31;
+  --secondary-color: #ec5242;
+  --secondary-transparent-color: #ec5342db;
+  --tertiary-color: #d3d3d3;
+  --white-color: #fff;
+  --primary-color-bg: #fff1;
+  --lato-font-family: 'Lato', sans-serif;
 }
 
 /* General styles STARTS */
 
 body {
-    padding: 0;
-    margin: 0;
-    border: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
 .active {
-    color: var(--secondary-color) !important;
-}
-
-a:hover {
-  opacity: .85;
+  color: var(--secondary-color) !important;
 }
 
 /* General styles ENDS */
 
 /* Navbar STARTS */
 
-.first-navbar, .first-navbar nav, .first-navbar div {
-    background-color: var(--primary-color);
-    font-family: var(--lato-font-family);
-}
-
-.first-navbar a {
-    color: var(--tertiary-color);
-    font-family: var(--lato-font-family);
+.first-navbar,
+.first-navbar nav,
+.first-navbar div {
+  background-color: var(--primary-color);
+  font-family: var(--lato-font-family);
 }
 
 .second-navbar {
-    background-color: var(--white-color);
-}
-
-.second-navbar a {
-    color: var(--tertiary-color);
-    font-family: var(--lato-font-family);
-    font-weight: 600;
-    padding: 0;
+  background-color: var(--white-color);
 }
 
 .Navbar-button {
-    padding: 8px;
-    border: 5px var(--secondary-color) solid;
-    color: var(--secondary-color);
-    background-color: var(--white-color);
+  padding: 8px;
+  border: 5px var(--secondary-color) solid;
+  color: var(--secondary-color);
+  background-color: var(--white-color);
 }
 
 /* Navbar ENDS */
@@ -83,41 +69,41 @@ a:hover {
 /* Hero Page STARTS */
 
 .hero-page {
-    background: linear-gradient(0deg, rgba(250,250,236,.85) 0%, rgba(255,255,255,.85) 102%, rgba(255,255,255,.97) 100%), url(../img/background-heropage.jpg);
-    height: 115vh;
-    width: 100%;
-    padding: 0;
-    background-repeat: no-repeat;
-    background-position: center;
+  background: linear-gradient(0deg, rgba(250, 250, 236, 0.85) 0%, rgba(255, 255, 255, 0.85) 102%, rgba(255, 255, 255, 0.97) 100%), url(../img/background-heropage.jpg);
+  height: 115vh;
+  width: 100%;
+  padding: 0;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .main-section {
-    padding: 8px;
-    color: var(--secondary-color);
+  padding: 8px;
+  color: var(--secondary-color);
 }
 
 .main-section div {
-    font-size: 22px;
-    font-weight: 400;
-    margin-top: 0 !important;
+  font-size: 22px;
+  font-weight: 400;
+  margin-top: 0 !important;
 }
 
 .main-section h1 {
-    font-size: 30px;
-    font-family: CocogooseBold;
-    letter-spacing: 1.5px;
-    color: var(--secondary-transparent-color);
+  font-size: 30px;
+  font-family: CocogooseBold, sans-serif;
+  letter-spacing: 1.5px;
+  color: var(--secondary-transparent-color);
 }
 
 .main-section p {
-    font-size: 14px;
-    color: var(--primary-color);
+  font-size: 14px;
+  color: var(--primary-color);
 }
 
 .main-section h1::after {
-    content: ' 2021';
-    font-family: sans-serif;
-    font-weight: 900;
+  content: ' 2021';
+  font-family: sans-serif;
+  font-weight: 900;
 }
 
 @media screen and (min-width: 768px) {
@@ -125,7 +111,7 @@ a:hover {
     margin-top: 16px;
     font-size: 50px;
     font-weight: 800;
-    font-family: CocogooseBold;
+    font-family: CocogooseBold, sans-serif;
     letter-spacing: 1.5px;
     color: var(--secondary-transparent-color);
   }
@@ -142,63 +128,64 @@ a:hover {
 
 .about-page {
   background-color: var(--primary-color);
-	background-image: radial-gradient(#000 5%, transparent 5%),
-  	radial-gradient(#000 5%, transparent 5%);
-	background-size: 30px 30px;
-	background-position: 0 0, 15px 15px;
+  background-image:
+    radial-gradient(#000 5%, transparent 5%),
+    radial-gradient(#000 5%, transparent 5%);
+  background-size: 30px 30px;
+  background-position: 0 0, 15px 15px;
   padding: 64px 8px;
   min-height: 120vh;
 }
 
 .about-section {
-    color: var(--tertiary-color);
-    text-align: center;
+  color: var(--tertiary-color);
+  text-align: center;
 }
 
 .about-line {
-    border-top: var(--secondary-color) 1px solid;
-    width: 15%;
-    max-width: 104px;
-    margin: 0 auto;
+  border-top: var(--secondary-color) 1px solid;
+  width: 15%;
+  max-width: 104px;
+  margin: 0 auto;
 }
 
 .about-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .about-item {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 8px 8px;
-    border: var(--tertiary-color) 1px solid;
-    padding: 32px 16px;
-    max-width: 100%;
-    background-color: var(--primary-color-bg);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 8px 8px;
+  border: var(--tertiary-color) 1px solid;
+  padding: 32px 16px;
+  max-width: 100%;
+  background-color: var(--primary-color-bg);
 }
 
 .about-item img {
-    background-color: var(--tertiary-color);
-    border-radius: 44px;
-    padding: 12px;
+  background-color: var(--tertiary-color);
+  border-radius: 44px;
+  padding: 12px;
 }
 
 .about-item h3 {
-    color: var(--secondary-color);
-    text-align: left;
-    margin: 16px;
-    margin-left: 16px;
+  color: var(--secondary-color);
+  text-align: left;
+  margin: 16px;
+  margin-left: 16px;
 }
 
 .about-item p {
-    color: var(--tertiary-color);
-    font-weight: 600;
-    font-size: 18px;
-    text-align: justify;
-    margin-left: 16px;
+  color: var(--tertiary-color);
+  font-weight: 600;
+  font-size: 18px;
+  text-align: justify;
+  margin-left: 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -219,7 +206,7 @@ a:hover {
     text-align: center;
     margin: 16px auto;
   }
-  
+
   .about-item p {
     text-align: center;
     margin: 0;
@@ -228,9 +215,11 @@ a:hover {
 }
 
 /* About section ENDS */
+
 /* Tickets Section STARTS */
 
-.ticket-page, .ticket-section {
+.ticket-page,
+.ticket-section {
   background: #eee;
 }
 
@@ -254,30 +243,38 @@ a:hover {
   grid-column-gap: 1px;
   grid-row-gap: 1px;
   overflow-x: auto;
-  border:  10px solid transparent;
-  background: 
-    linear-gradient(#fff,#fff) center/calc(100% - 2px) calc(100% - 2px) padding-box,
-    repeating-linear-gradient( -45deg, 
-    transparent 2px, transparent 2px, 
-    var(--primary-color) 16px, var(--white-color) 32px ,var(--secondary-color) 48px) border-box;
-  background-repeat:no-repeat;
+  border: 10px solid transparent;
+  background:
+    linear-gradient(#fff, #fff) center/calc(100% - 2px) calc(100% - 2px) padding-box,
+    repeating-linear-gradient(
+      -45deg,
+      transparent 2px,
+      transparent 2px,
+      var(--primary-color) 16px,
+      var(--white-color) 32px,
+      var(--secondary-color) 48px
+    ) border-box;
+  background-repeat: no-repeat;
 }
 
 .div1 {
   grid-area: 1 / 1 / 2 / 2;
-  background: #eee 
+  background: #eee;
 }
+
 .div2 {
   grid-area: 1 / 2 / 2 / 3;
-  background: #eee
+  background: #eee;
 }
+
 .div3 {
   grid-area: 1 / 3 / 2 / 5;
-  background: #eee
+  background: #eee;
 }
+
 .div4 {
   grid-area: 1 / 5 / 2 / 6;
-  background: #eee
+  background: #eee;
 }
 
 .div5 { grid-area: 2 / 1 / 3 / 2; }
@@ -321,10 +318,11 @@ a:hover {
 }
 
 .submit-buttom:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 /* Tickets Section ENDS */
+
 /* Footer STARTS */
 
 footer {
@@ -332,7 +330,7 @@ footer {
   padding: 16px 0;
   color: var(--tertiary-color);
   font-weight: 600;
-  font-size: 12px
+  font-size: 12px;
 }
 
 footer ul {
@@ -355,13 +353,31 @@ footer i:hover {
   color: var(--tertiary-color);
 }
 
+/* Footer ENDS */
+
+/* Links styles */
+
 footer a {
   color: var(--secondary-color);
+}
+
+.first-navbar a {
+  color: var(--tertiary-color);
+  font-family: var(--lato-font-family);
+}
+
+.second-navbar a {
+  color: var(--tertiary-color);
+  font-family: var(--lato-font-family);
+  font-weight: 600;
+  padding: 0;
+}
+
+a:hover {
+  opacity: 0.85;
 }
 
 footer a:hover {
   color: var(--tertiary-color);
   text-decoration: underline;
 }
-
-/* Footer ENDS */
