Add position-fixed in navbar for mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ body {
 
 .second-navbar {
   background-color: var(--white-color);
+  position: fixed;
+  width: 100%;
 }
 
 .Navbar-button {
@@ -107,6 +109,10 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .second-navbar {
+    position: relative;
+  }
+
   .main-section h1 {
     margin-top: 16px;
     font-size: 50px;
